# agora_rtc_sdk

./: .gitignore  PACKAGE_INFO
example/: CMakeLists.txt  README.zh.md  build-x86_64.sh
example/common/: sample_common.cpp  sample_common.h  sample_local_user_observer.h  sample_local_user_observer2.h
example/h264_pcm/: sample_receive_h264_pcm.cpp  sample_send_h264_pcm.cpp
example/license/: CMakeLists.txt  license_activator.c  license_query.c
example/mediaPacket/: CMakeLists.txt  sample_receive_mediaControlPacket.cpp  sample_send_mediaControlPacket.cpp
example/scripts/: env.cmake  os.cmake
example/send_dual_video_stream/: CMakeLists.txt  sample_send_h264_dual_stream.cpp
example/unused_sample/aac/: CMakeLists.txt  sample_send_aac.cpp
example/unused_sample/h264_opus/: CMakeLists.txt  sample_send_h264_opus.cpp
example/unused_sample/mixed_audio/: sample_receive_mixed_audio.cpp
example/unused_sample/string_uid/: sample_stringuid_receive.cpp  sample_stringuid_send.cpp
example/unused_sample/vp8/: sample_send_ivfvp8.cpp
